[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Tejas Redkar <redkartejas213@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.5"
fastapi = "^0.112.0"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.32"
sqlmodel = "^0.0.21"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start= "app.main:start"